GNOME Bugzilla – Bug 638930
Simple build fixes
Last modified: 2011-01-10 09:46:42 UTC
Attaching a patch that fixes various compiler warnings.
Created attachment 177767 [details] [review] Simple patch
Good catch. For some reason however git doesn't want to apply your patch (it doesn't understand the patch format). Did you generate the patch with git format-patch?
Created attachment 177843 [details] [review] Fix various warnings Missing header, usage of the wrong variable, and bad function signature.
Sorry, I used "git show", I guess. Bad me :-)
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.