Fix various warnings

Missing header, usage of the wrong variable, and bad function signature.

https://bugzilla.gnome.org/show_bug.cgi?id=638930